2007-02-01  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/PlaylistView.cs: Add a 1px fixed column that can't be 
	moved or resized and is always in the last position; do not allow columns
	to be dragged to the right of this special column; this ensures that if
	the user drags a resizable column into the 'last' position, it will not
	fill to eat the remaining width of the view, thus creating a false width;
	this should _finally_ get rid of unwanted horizontal scrolling. This
	fix is hereby dedicated to Whiprush.

	* src/Core/Banshee/Banshee.TrackView.Columns/TrackViewColumn.cs: Turn
	on ellipsizing on columns CellRendererText renderers, fixed packing of
	the renderer - a bug exposed by setting ellipsizing

	* src/Core/Banshee.Base/Sources/AudioCdSource.cs: Show a 'Copy CD' action
	button in the header when the source is active

2007-02-01  Aaron Bockover  <abock@gnome.org>

	* data/banshee.glade: Made spacing look better now that buttons do not
	have a relief style

	* data/UIManagerLayout.xml: Added placeholder for actions that are 'new'

	* data/audio-profiles/Makefile.am: CLEANFILES->DISTCLEANFILES, fixes a 
	potential build issue regarding generating the audio profiles .xml files

	* src/Plugins/Banshee.Plugins.Podcast/*: Added a subscribe button to the
	toolbar, change the verbage of 'feed' to 'podcast' as it's more user 
	friendly (BNC 237045, 237038)

	* src/Plugins/Banshee.Plugins.Radio/RadioSource.cs: Do not show the
	playlist header and disable Write to CD action

	* src/Plugins/Banshee.Plugins.NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Fixed a potential crasher regarding showing cover art (BNC 236428)

	* src/Core/Banshee/PlayerInterface.cs: Fixed visibility logic of the
	playlist header; fixed a tiny focus bug

	* src/Core/Banshee.Widgets/ActionButton.cs: Set relief to none

	* src/Core/Banshee.Widgets/FadingAlignment.cs: Added a nice fading
	widget, but it's not in use anywhere right now; my idea didn't work