@@ -3,7 +3,8 @@ expanded upon for the release notes. It should be cleared after each
 release. 
 
 FIXES (BGO):
-398491: Mass Storage DAP should use file naming conventions
+398491: Mass Storage DAP should use file naming conventions (gabaug)
+334698: Properly resize the cover art popup to perfectly fit the image (abock)
 
 FIXES (BNC):
 
