@@ -41,6 +41,7 @@
     <File name="../../../data/images/rating-unrated.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./FadingAlignment.cs" subtype="Code" buildaction="Compile" />
     <File name="./VolumeButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="./CoverArtView.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
